# game-srv-muduo

./: .cproject  CMakeLists.txt  README.md  clean.sh
app/: CMakeLists.txt
app/battle/: BattleServer.cpp  BattleServer.h  CMakeLists.txt  DBCWrapTemplate.h  LogicAccessAdManager.cpp  LogicAccessAdManager.h  LogicActivityTencent.cpp  LogicActivityTencent.h  LogicAdvertiseManager.cpp  LogicAdvertiseManager.h  LogicAllianceManager.cpp  LogicAllianceManager.h  LogicBuildingManager.cpp  LogicBuildingManager.h  LogicCardManager.cpp  LogicCardManager.h  LogicCropsRewards.cpp  LogicCropsRewards.h  LogicCustomerManager.cpp  LogicCustomerManager.h  LogicDaily4399Activity.cpp  LogicDaily4399Activity.h  LogicDailyShareRewards.h  LogicDynamicInfoManager.cpp  LogicDynamicInfoManager.h  LogicFriendManager.cpp  LogicFriendManager.h  LogicFriendOrderManager.cpp  LogicFriendOrderManager.h  LogicFriendWorkerManager.cpp  LogicFriendWorkerManager.h  LogicFriendlyTreeManager.cpp  LogicFriendlyTreeManager.h  LogicFundActivityManager.cpp  LogicFundActivityManager.h  LogicGM.cpp  LogicGM.h  LogicGameActivityManager.cpp  LogicGameActivityManager.h  LogicIdCtrl.cpp  (+75 more)
app/common/: Base64.cpp  Buffer.cpp  Buffer.h  BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  CMakeLists.txt  Common.h  CommonUtil.cpp  CommonUtil.h  Config.cpp  Config.h  Convert.cpp  Convert.h  Crypt.h  DawxCrypt.cpp  FileToJson.cpp  FileToJson.h  FileUtil.cpp  FileUtil.h  HttpUtil.cpp  HttpUtil.h  IBase.cpp  IBase.h  IBuffer.h  ILock.h  IMemory.h  IMessageQueue.h  IPacket.h  IPacket.h.bak  ISemaphore.h  IShareMemory.h  JsonUtil.cpp  JsonUtil.h  LogicCommonUtil.cpp  LogicCommonUtil.h  MainConfig.cpp  MainConfig.h  Math.cpp  (+25 more)
app/config/: CMakeLists.txt  CdKey.pb.cpp  CdKey.pb.h  CdKey.proto  CommonGiftConfig.pb.cpp  CommonGiftConfig.pb.h  CommonGiftConfig.proto  ConfigAccessAd.pb.cpp  ConfigAccessAd.pb.h  ConfigAccessAd.proto  ConfigActivity.pb.cpp  ConfigActivity.pb.h  ConfigActivity.proto  ConfigActivityTencent.pb.cpp  ConfigActivityTencent.pb.h  ConfigActivityTencent.proto  ConfigAd.pb.cpp  ConfigAd.pb.h  ConfigAd.proto  ConfigAlliance.pb.cpp  ConfigAlliance.pb.h  ConfigAlliance.proto  ConfigAllianceRace.pb.cpp  ConfigAllianceRace.pb.h  ConfigAllianceRace.proto  ConfigAssistor.pb.cpp  ConfigAssistor.pb.h  ConfigAssistor.proto  ConfigBuilding.pb.cpp  ConfigBuilding.pb.h  ConfigBuilding.proto  ConfigCard.pb.cpp  ConfigCard.pb.h  ConfigCard.proto  ConfigFriend.pb.cpp  ConfigFriend.pb.h  ConfigFriend.proto  ConfigFriendWorker.pb.cpp  ConfigFriendWorker.pb.h  ConfigFriendWorker.proto  (+69 more)
app/data/: AdvertiseManager.cpp  AdvertiseManager.h  AsynManager.cpp  AsynManager.h  BaseManager.cpp  BaseManager.h  CMakeLists.txt  ConfigWrap.cpp  ConfigWrap.h  DBCMultipleAllianceTemplate.h  DBCMultipleTemplate.h  DBCSimpleAllianceTemplate.h  DBCSimpleTemplate.h  DataAidRecord.h  DataAidRecordManager.cpp  DataAidRecordManager.h  DataAlliance.h  DataAllianceAllManager.cpp  DataAllianceAllManager.h  DataAllianceApply.h  DataAllianceDonation.h  DataAllianceMapping.cpp  DataAllianceMapping.h  DataAllianceMember.h  DataAllianceNotify.h  DataAnimal.h  DataBase.cpp  DataBase.h  DataBuildings.cpp  DataBuildings.h  DataChargeHistory.cpp  DataChargeHistory.h  DataChargeHistoryManager.cpp  DataChargeHistoryManager.h  DataConcern.h  DataCropLand.h  DataEquipmentStar.h  DataExchangeCode.cpp  DataExchangeCode.h  DataFans.h  (+92 more)
app/kernel/: ActivitySingleton.h  AppDefine.h  BattleSingleton.h  BusinessLog.cpp  BusinessLog.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigPB.cpp  ConfigPB.h  DBCBase.h  DataBaseDBC.cpp  DataBaseDBC.h  DataLog.cpp  DataLog.h  DataSingleton.cpp  DataSingleton.h  ErrorUtil.cpp  ErrorUtil.h  FirePacket.cpp  FirePacket.h  Kernel.h  KernelUtil.cpp  KernelUtil.h  ProtobufDispatcher.h  Session.cpp  Session.h  WhiteList.cpp  WhiteList.h
app/main/: CMakeLists.txt  battled  battled.cpp
app/pb/: CMakeLists.txt  DataCommon.pb.cpp  DataCommon.pb.h  DataCommon.proto  ErrorRet.pb.cpp  ErrorRet.pb.h  ErrorRet.proto  ProtoAccessAd.pb.cpp  ProtoAccessAd.pb.h  ProtoAccessAd.proto  ProtoActivity.pb.cpp  ProtoActivity.pb.h  ProtoActivity.proto  ProtoActivityTencent.pb.cpp  ProtoActivityTencent.pb.h  ProtoActivityTencent.proto  ProtoAdvertise.pb.cpp  ProtoAdvertise.pb.h  ProtoAdvertise.proto  ProtoAlliance.pb.cpp  ProtoAlliance.pb.h  ProtoAlliance.proto  ProtoAssistor.pb.cpp  ProtoAssistor.pb.h  ProtoAssistor.proto  ProtoBuilding.pb.cpp  ProtoBuilding.pb.h  ProtoBuilding.proto  ProtoCard.pb.cpp  ProtoCard.pb.h  ProtoCard.proto  ProtoDynamicInfo.pb.cpp  ProtoDynamicInfo.pb.h  ProtoDynamicInfo.proto  ProtoFriend.pb.cpp  ProtoFriend.pb.h  ProtoFriend.proto  ProtoFriendOrder.pb.cpp  ProtoFriendOrder.pb.h  ProtoFriendOrder.proto  (+74 more)
baselib/include/: base_comm_define.h  base_socket.h  basetype.h  basic.h  caes.h  cgiin.h  cgivalue.h  commlog.h  compress.h  cookie.h  crc.h  csconv.h  ctime.h  dbc_batch.h  dbc_conn_pool.h  dbc_keepalive.h  dbc_route_table.h  dbc_route_table_ex.h  email.h  html_template.h  htmltpl.h  inifile.h  json.h  lock.h  logserver.h  ls_vote_define.h  markupstl.h  mathematics.h  md5_dbc.h  membuf.h  minicurl.h  netclientex.h  (+18 more)
proto/: Admin.pb.cc  Admin.pb.h  Admin.proto  CMakeLists.txt  Common.pb.cc  Common.pb.h  Common.proto  ProtoArchive.pb.cc  ProtoArchive.pb.h  ProtoArchive.proto  ProtoUser.pb.cc  ProtoUser.pb.h  ProtoUser.proto  all  comm.h  m.sh
save/: CMakeLists.txt  Save.pb.cc  Save.pb.h  Save.proto  SaveInc.h  m.sh
(+12 files in other folders)
